check_final_refactor.txt
    Checking homelab_manager v0.1.0 (/Users/michal/Development/homelab_manager)
warning: unused imports: `Alias` and `Expr`
 --> src/db/devices.rs:8:26
  |
8 | use sea_orm::sea_query::{Alias, Expr};
  |                          ^^^^^  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `networks` and `services`
 --> src/integrations/mod.rs:2:37
  |
2 | use crate::entities::{integrations, services, devices, interfaces, ip_addresses, networks};
  |                                     ^^^^^^^^                                     ^^^^^^^^

warning: unused import: `ModelTrait`
 --> src/integrations/mod.rs:4:77
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                                             ^^^^^^^^^^

warning: unused import: `ipnetwork::IpNetwork`
 --> src/integrations/mod.rs:5:5
  |
5 | use ipnetwork::IpNetwork;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/integrations/mod.rs:134:21
    |
134 |                 use std::str::FromStr;
    |                     ^^^^^^^^^^^^^^^^^

warning: unused import: `RuntimeErr`
 --> src/models/types.rs:4:67
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |                                                                   ^^^^^^^^^^

error[E0599]: no variant or associated item named `CreatedAt` found for enum `ip_addresses::Column` in the current scope
   --> src/db/devices.rs:154:47
    |
154 |                 .column(ip_addresses::Column::CreatedAt)
    |                                               ^^^^^^^^^ variant or associated item not found in `ip_addresses::Column`
    |
   ::: src/entities/ip_addresses.rs:5:35
    |
  5 | #[derive(Clone, Debug, PartialEq, DeriveEntityModel, Serialize, Deserialize)]
    |                                   ----------------- variant or associated item `CreatedAt` not found for this enum

error[E0599]: no variant or associated item named `UpdatedAt` found for enum `ip_addresses::Column` in the current scope
   --> src/db/devices.rs:155:47
    |
155 |                 .column(ip_addresses::Column::UpdatedAt)
    |                                               ^^^^^^^^^ variant or associated item not found in `ip_addresses::Column`
    |
   ::: src/entities/ip_addresses.rs:5:35
    |
  5 | #[derive(Clone, Debug, PartialEq, DeriveEntityModel, Serialize, Deserialize)]
    |                                   ----------------- variant or associated item `UpdatedAt` not found for this enum

warning: unused import: `TryGetable`
 --> src/models/types.rs:4:15
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |               ^^^^^^^^^^

warning: unused import: `sea_orm::entity::prelude`
 --> src/models/types.rs:3:5
  |
3 | use sea_orm::entity::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ColumnTrait`
 --> src/integrations/mod.rs:4:51
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                   ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `homelab_manager` (lib) generated 9 warnings
error: could not compile `homelab_manager` (lib) due to 2 previous errors; 9 warnings emitted
